crates/descar-core/tests/snapshots/type_checker_snapshot_tests__array_invalid_index_access.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2030,
        ),
        message: "Array index must be integer type, found char",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 2,
                column: 9,
                offset: 38,
                index: 38,
                utf8_offset: 38,
                code_point_offset: 38,
            },
            end: SourceLocation {
                line: 2,
                column: 12,
                offset: 41,
                index: 41,
                utf8_offset: 41,
                code_point_offset: 41,
            },
        },
        help: None,
    },
]
