crates/descar-core/tests/snapshots/type_checker_snapshot_tests__assign_f64_to_i32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2002,
        ),
        message: "Cannot assign f64 to i32",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 2,
                column: 9,
                offset: 27,
                index: 27,
                utf8_offset: 27,
                code_point_offset: 27,
            },
            end: SourceLocation {
                line: 2,
                column: 14,
                offset: 32,
                index: 32,
                utf8_offset: 32,
                code_point_offset: 32,
            },
        },
        help: None,
    },
]
