crates/descar-core/tests/snapshots/type_checker_snapshot_tests__assign_to_a_non_array.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2031,
        ),
        message: "Cannot index into non-array type i32",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 2,
                column: 5,
                offset: 24,
                index: 24,
                utf8_offset: 24,
                code_point_offset: 24,
            },
            end: SourceLocation {
                line: 2,
                column: 8,
                offset: 27,
                index: 27,
                utf8_offset: 27,
                code_point_offset: 27,
            },
        },
        help: None,
    },
]
