crates/descar-core/tests/snapshots/type_checker_snapshot_tests__binary_comparison_invalid.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2014,
        ),
        message: "Comparison operator 'Less' requires compatible types, found bool and string",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 6,
                offset: 5,
                index: 5,
                utf8_offset: 5,
                code_point_offset: 5,
            },
            end: SourceLocation {
                line: 1,
                column: 7,
                offset: 6,
                index: 6,
                utf8_offset: 6,
                code_point_offset: 6,
            },
        },
        help: None,
    },
]
